Simplify Stream call chain